--- a/berry-frontend/public/index.html
+++ b/berry-frontend/public/index.html
@@ -5,11 +5,12 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <title>
     <%= htmlWebpackPlugin.options.title %>
   </title>
   <link rel="stylesheet" href="https://at.alicdn.com/t/c/font_4300051_kodep2zldl.css">
+  <link rel="shortcut icon" type="image/x-icon" href="berry-logo.png">
+  </link>
 </head>
 
 <body>
